# persistent-stochastic-ablation-resmlp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REPRODUCTION.md  TOOLS.md  analyze_dataset.py  pyproject.toml  run_reproduction.sh  train.py
aws/: __init__.py
aws/sagemaker/: .env.example  .gitignore  __init__.py  cost_estimator.py  current_batch_configurations.txt  log_downloader.py  log_parser.py  reconstruct_jobs.py  requirements.txt  results_parser.py  runner.py  storage_estimator.py  storage_report.json  train.py
dataset/: .gitignore
models/: .gitignore
reproduction/: asymmetric.txt  configurations.txt
results/: preregistration_initial_observations.md  psa_resmlp_summary.md  psa_resmlp_trials.md  psa_simplemlp_summary.md  psa_simplemlp_trials.md  psa_simplemlp_trials_convergence.md  psa_simplemlp_trials_lkg_growth.md  sagemaker_cost_report.json
results/logs/: download_summary.json
results/logs/psa-1024x1-decay-2025-08-04-19-56-48-115/: summary.json
results/logs/psa-1024x1-dropout-2025-08-04-19-56-49-685/: summary.json
results/logs/psa-1024x1-full-2025-08-04-19-56-51-122/: summary.json
results/logs/psa-1024x1-hidden-2025-08-04-19-56-52-622/: summary.json
results/logs/psa-1024x1-none-2025-08-04-19-56-46-515/: summary.json
results/logs/psa-1024x1-output-2025-08-04-19-56-54-257/: summary.json
results/logs/psa-10x10-decay-2025-08-04-19-17-04-385/: summary.json
results/logs/psa-10x10-dropout-2025-08-04-19-17-06-141/: summary.json
results/logs/psa-10x10-full-2025-08-04-19-17-07-770/: summary.json
results/logs/psa-10x10-hidden-2025-08-04-19-17-09-508/: summary.json
results/logs/psa-10x10-none-2025-08-04-19-17-02-730/: summary.json
results/logs/psa-10x10-output-2025-08-04-19-17-11-149/: summary.json
results/logs/psa-115x115-decay-2025-08-04-19-12-28-787/: summary.json
results/logs/psa-115x115-dropout-2025-08-04-19-12-30-378/: summary.json
results/logs/psa-115x115-full-2025-08-04-19-12-32-132/: summary.json
results/logs/psa-115x115-hidden-2025-08-04-19-12-33-746/: summary.json
results/logs/psa-115x115-none-2025-08-04-19-12-26-919/: summary.json
results/logs/psa-115x115-output-2025-08-04-19-12-35-382/: summary.json
results/logs/psa-115x2-decay-2025-08-04-19-55-42-201/: summary.json
results/logs/psa-115x2-dropout-2025-08-04-19-55-43-724/: summary.json
results/logs/psa-115x2-full-2025-08-04-19-55-45-363/: summary.json
results/logs/psa-115x2-hidden-2025-08-04-19-55-47-007/: summary.json
results/logs/psa-115x2-none-2025-08-04-19-55-40-441/: summary.json
scripts/: __init__.py  clean.py  clean_all.py  generate_reproduction_tests.py  get_asymmetric_models.py  make_figure_convergence.py  make_figure_design_space.py  make_figure_heatmaps.py  make_table_architectures.py  make_table_trial_accuracy.py  regime_classifier.py
src/: 001-train-psa-simplemlp.py  __init__.py  train_psa_resmlp.py  train_psa_simplemlp.py
(+565 files in other folders)
