[tool.poetry]
name = "src"
version = "0.1.0"
description = "Source code for the mini-paper 'Beyond Pruning and Dropout: Evolving Robust Networks via Persistent Stochastic Ablation'"
authors = ["Tim Cotten <tcotten@scrypted.ai>", "Tim Cotten <tcotten2@gmu.edu>"]
readme = "README.md"
packages = [{include = "src"}, {include = "aws"}]



[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.7.1"
torchvision = "^0.22.1"
rich = "^14.1.0"
safetensors = "^0.5.3"
python-dotenv = "^1.1.1"
boto3 = "^1.40.1"
botocore = "^1.40.1"
sagemaker = "^2.249.0"

[tool.poetry.scripts]
train = "src.train_psa_simplemlp:main"
clean = "scripts.clean:main"
clean-all = "scripts.clean_all:main"
generate-reproduction-tests = "scripts.generate_reproduction_tests:main"
sagemaker-results-parser = "aws.sagemaker.results_parser:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
